# Bootcamp

./: README.md  daily-log.md
Dataflow_framework/abstraction_level0/: README.md
Day-0/ex-basic-1/: README.md  main.py  pyproject.toml
Day-0/ex-basic-1/srija_hello/: __init__.py  __main__.py
Day-0/ex-basic-1/srija_hello.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Day-0/ex-basic-2/: README.md  (+1 more)
Day-1/: readme.md
Day-2/: readme.md
dataflow-framework/: README.md
doctools/: README.md
figure-caption-extraction/: .env  Dockerfile  Makefile  README.md  bash.exe.stackdump  database_transfer.py  docker-compose.yml  generate_key.py  packages.txt  pmcids.txt  pyproject.toml  requirements.txt  setup.py  start.sh  template.env
figure-caption-extraction/.streamlit/: config.toml
figure-caption-extraction/data/: database_schema.sql  entities.csv  figures.csv  figures.db  figures.db.wal  papers.csv
figure-caption-extraction/figure_caption_extraction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
figure-caption-extraction/src/: streamlit_app.py
figure-caption-extraction/src/api/: models.py
figure-caption-extraction/src/api/routes/: papers.py
figure-caption-extraction/src/batch/: processor.py
figure-caption-extraction/src/cli/: main.py
figure-caption-extraction/src/core/: auth.py  config.py  database.py  init_services.py  service_registry.py
figure-caption-extraction/src/services/: data_access.py  entity_recognition.py  pubmed.py
figure-caption-extraction/src/services/base/: entity_recognizer.py  source_provider.py
persistence-drills/: README.md
(+527 files in other folders)
