[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "figure-caption-extraction"
version = "0.1"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["src.*"]
namespace = true

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]