[project]
name = "srija-hello"
version = "0.1.0"
description = "A simple hello world package by Srija"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name="Srija", email="sriworkshere@gmail.com" }]
license = {text = "MIT"}

[project.scripts]
srija-hello = "srija_hello.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
